// Copyright 2025 The LUCI Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package resultai;

option go_package = "go.chromium.org/luci/resultai/proto/v1;resultai";

// Prompt service definition
service Prompt {
  rpc ExecutePrompt(ExecutePromptRequest) returns (ExecutePromptResponse);
}

// The request message containing the prompt ID and its parameters.
message ExecutePromptRequest {
  // Unique resource name of theprompt template
  // Format: promptTemplates/{prompt_template}
  string name = 1;
  // Prompt parameters to fill the prompt template
  map<string, string> prompt_params = 2;
}

// The response message containing the output from the AI model.
message ExecutePromptResponse { string prompt_output = 1; }
